# Customer-Support-Automation

./: .gitignore  README.md  data_cleaning.ipynb  main.py  mlflow.db  models.ipynb  pyproject.toml
app/: Introduction.py  main.py
app/pages/: 1_Ticket_Automation.py  1_support_ticket.py
notebooks/: bert.ipynb  challenger_model.ipynb  dataset_sampling.ipynb  department_classification.ipynb  distilbert.ipynb  models.ipynb
notebooks/model_artifacts/: label_encoder.pkl
