[project]
name = "customer-support-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasets>=4.8.5",
    "huggingface-hub>=1.16.4",
    "matplotlib>=3.10.9",
    "nltk>=3.9.4",
    "pandas>=3.0.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]
