[project]
name = "customer-support-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dagshub>=0.7.0",
    "datasets>=4.8.5",
    "huggingface-hub>=1.17.0",
    "matplotlib>=3.10.9",
    "mlflow>=3.12.0",
    "nltk>=3.9.4",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "xgboost>=3.2.0",
]
